# parking_reservation_chatbot

./: .env_example  .gitignore  LICENSE  Makefile  README.md  parking_info.txt  pyproject.toml  requirements.txt  requirements_stash.txt  run.py  run_admin_api.py  run_admin_console_agent.py  run_chatbot_agent.py  run_evaluation.py
.github/workflows/: test.yml
data/: seed_data.json
docs/: CODE_STRUCTURE.md  DATA_FLOW.md  DESIGN_HUMAN_IN_THE_LOOP.md  EVALUATION.md  INDEX.md  MCP_FILESYSTEM_SETUP.md  README.md  SYSTEM_SUMMARY.md  TESTING_GUARDRAILS.md
evaluation_reports/: README.md  SUMMARY.md  evaluation_report_cosine.txt  evaluation_report_l2.txt  summary_by_metric.md
rag_data/: README.md  parking_info.txt
reservations_mcp/: .gitkeep
src/: __init__.py  config.py
src/admin_api/: __init__.py  app.py  client.py
src/chatbot/: __init__.py  chatbot.py  llm_setup.py  rag_system.py  reservation_handler.py
src/db/: __init__.py  sqlite_db.py
src/evaluation/: __init__.py  eval_dataset.py  rag_evaluator.py
src/guardrails/: __init__.py  guard_rails.py  sensitive_data_filter.py
src/mcp_reservation_logger/: __init__.py  client_fs.py
src/vector_db/: __init__.py  embeddings.py  faiss_store.py  mock_weaviate.py  parking_info_loader.py  vector_store.py
tests/: __init__.py  conftest.py  test_admin_api.py  test_chatbot.py  test_db.py  test_guardrails.py  test_mcp_reservation_logger.py  test_rag_evaluation.py  test_rag_system.py  test_reservation_handler.py
tests_system/: conftest.py  test_system.py
