[project]
name = "parking-reservation-chatbot"
version = "0.1.0"
description = "Chatbot for parking information and reservations (RAG + LangGraph)"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "run_chatbot_agent.py", "run_evaluation.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:builtin type .* has no __module__:DeprecationWarning",
    "ignore:.*state_schema.*:UserWarning",
    "ignore::UserWarning:langgraph.graph.state",
]
